# cf-escrow

./: .gitignore  README.md
.claude/: settings.local.json
contracts/: Cargo.toml  README.md  deploy.sh
contracts/api/: Cargo.toml
contracts/api/src/: consts.rs  error.rs  instruction.rs  lib.rs  sdk.rs
contracts/api/src/state/: escrow.rs  mod.rs
contracts/program/: Cargo.toml
contracts/program/src/: accept.rs  cancel.rs  claim_task_failure.rs  claim_task_success.rs  create.rs  lib.rs  reclaim.rs
contracts/program/tests/: accept.rs  cancel.rs  claim_task_failure.rs  claim_task_success.rs  create.rs  reclaim.rs
contracts/program/tests/helpers/: mod.rs
frontend/: accept.html  client.html  index.html  provider.html  serve.sh  vercel.json
frontend/css/: main.css
frontend/js/: accept.js  app.js  client.js  config.js  router.js  student.js
frontend/js/components/: create-modal.js  escrow-card.js  escrow-list.js  toast-manager.js  wallet-header.js
frontend/js/services/: chain.js  client-transactions.js  storage.js  student-transactions.js  transactions.js  wallet.js
frontend/js/utils/: format.js  serialize.js
frontend/provider/: index.html
test-tokens/: Cargo.toml  README.md  deploy.sh
test-tokens/api/: Cargo.toml
test-tokens/api/src/: consts.rs  error.rs  instruction.rs  lib.rs  sdk.rs
test-tokens/api/src/state/: config.rs  mod.rs
test-tokens/program/: Cargo.toml
test-tokens/program/src/: initialize.rs  lib.rs  mint_to.rs
test-tokens/scripts/: bun.lockb  fund.js  initialize.js  mint.js  package-lock.json  package.json
