[workspace]
resolver = "2"
members = ["api", "program"]

[env]
OPENSSL_NO_VENDOR = "1"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
homepage = ""
documentation = ""
repository = ""
readme = "./README.md"
keywords = ["solana"]

[workspace.dependencies]
cf-escrow-api = { path = "./api", version = "0.1.0" }
bytemuck = "1.14"
num_enum = "0.7"
steel = { version = "3.0", features = ["spl"] }
thiserror = "1.0"
solana-program = "=2.1.21"
spl-token = { version = "^4", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "^6", features = ["no-entrypoint"] }
