[workspace]
resolver = "2"
members = ["api", "program"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
homepage = ""
documentation = ""
repository = ""
readme = "./README.md"
keywords = ["solana"]

[workspace.dependencies]
test-tokens-api = { path = "./api", version = "0.1.0" }
bytemuck = "1.18"
num_enum = "0.7"
thiserror = "1.0"
steel = { version = "4.0", features = ["spl"] }       # was "2.1" — incompatible with solana-program 2.x
solana-program = "2.1"
spl-token = { version = "^4", features = ["no-entrypoint"] }        # was "4.0" — correct range, wrong format
spl-associated-token-account = { version = "^6", features = ["no-entrypoint"] }  # was "2.0" — completely wrong
