[package]
name = "cf-escrow-program"
description = "CfEscrow program"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "cf_escrow_program"
doctest = false

[dependencies]
cf-escrow-api = { workspace = true }
steel = { workspace = true }
solana-program = { workspace = true }
spl-associated-token-account = { workspace = true }
spl-token = { workspace = true }

[dev-dependencies]
cf-escrow-api = { workspace = true }
litesvm = "=0.5.0"
solana-sdk = "=2.1.21"
spl-token = { version = "^4", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "^6", features = ["no-entrypoint"] }
bytemuck = { workspace = true }
